--- a/Event_Mgnt_System/Event_Mgnt_System/Event_Mgnt_System.csproj
+++ b/Event_Mgnt_System/Event_Mgnt_System/Event_Mgnt_System.csproj
@@ -249,6 +249,8 @@
     <Content Include="Views\User\UserHome.cshtml" />
     <Content Include="Views\Shared\_SignupLayoutPage.cshtml" />
     <Content Include="Views\User\BookEvent.cshtml" />
+    <Content Include="Views\User\Profile.cshtml" />
+    <Content Include="Views\User\WaitPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
