--- a/Event_Mgnt_System/Event_Mgnt_System/Event_Mgnt_System.csproj
+++ b/Event_Mgnt_System/Event_Mgnt_System/Event_Mgnt_System.csproj
@@ -174,6 +174,9 @@
     <Compile Include="Models\Registration.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\sysdiagram.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\tbl_admin.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -188,9 +191,13 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\footer.css" />
+    <Content Include="Content\images\Copper.jpg" />
     <Content Include="Content\images\front.png" />
+    <Content Include="Content\images\gold decoration.jpg" />
     <Content Include="Content\images\Logo.png" />
     <Content Include="Content\images\Logo2.png" />
+    <Content Include="Content\images\Platinum.jpg" />
+    <Content Include="Content\images\silver.jpg" />
     <Content Include="Content\PagedList.css" />
     <Content Include="Content\Pagination.css" />
     <Content Include="Content\PopupWiin.css" />
