Forms editing and admin home changes

--- a/Event_Mgnt_System/Event_Mgnt_System/Event_Mgnt_System.csproj
+++ b/Event_Mgnt_System/Event_Mgnt_System/Event_Mgnt_System.csproj
@@ -186,6 +186,42 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Aboutimages\birthday events.png" />
+    <Content Include="Content\Aboutimages\corporate-1-1024x683.jpg" />
+    <Content Include="Content\Aboutimages\corporate.png" />
+    <Content Include="Content\Aboutimages\entertainment %281%29.png" />
+    <Content Include="Content\Aboutimages\entertainment.png" />
+    <Content Include="Content\Aboutimages\g5.jpg" />
+    <Content Include="Content\Aboutimages\img_1.jpeg" />
+    <Content Include="Content\Aboutimages\img_2.jpg" />
+    <Content Include="Content\Aboutimages\img_4.jpg" />
+    <Content Include="Content\Aboutimages\img_5.jpg" />
+    <Content Include="Content\Aboutimages\img_6.jpg" />
+    <Content Include="Content\Aboutimages\Star-Theme-1-1.jpeg" />
+    <Content Include="Content\Aboutimages\thumbs_1-15.jpeg" />
+    <Content Include="Content\Aboutimages\thumbs_2017-10-06-PHOTO-00018678.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_c10.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_c11.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_c16-1.jpeg" />
+    <Content Include="Content\Aboutimages\thumbs_ce22.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_ce8.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_g3.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_IMG_7493.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_PHOTO-2018-04-03-13-14-38.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_PHOTO-2018-04-03-13-18-44.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_PHOTO-2018-08-25-14-38-57-2.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_w11.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_w2.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_w5.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_Wedding-10.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_Wedding-11.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_Wedding-15.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_Wedding-18 %281%29.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_Wedding-18.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_Wedding-28.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_Wedding-8.jpg" />
+    <Content Include="Content\Aboutimages\thumbs_Wedding-9.jpg" />
+    <Content Include="Content\Aboutimages\Wedding Planners.png" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -197,6 +233,7 @@
     <Content Include="Content\images\Logo.png" />
     <Content Include="Content\images\Logo2.png" />
     <Content Include="Content\images\Platinum.jpg" />
+    <Content Include="Content\images\regilogo.png" />
     <Content Include="Content\images\silver.jpg" />
     <Content Include="Content\images\slide2.jpg" />
     <Content Include="Content\images\slide3.jpg" />
@@ -210,6 +247,7 @@
     <Content Include="Content\slide4.jpg" />
     <Content Include="Content\table.css" />
     <Content Include="Content\slider.css" />
+    <Content Include="Content\table2.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
