--- a/Event_Mgnt_System/Event_Mgnt_System/Event_Mgnt_System.csproj
+++ b/Event_Mgnt_System/Event_Mgnt_System/Event_Mgnt_System.csproj
@@ -150,6 +150,9 @@
     <Compile Include="Models\Event.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\feedback.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\FoodItem.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
